src/test/ui/builtin-superkinds/builtin-superkinds-in-metadata.stderr
error[E0277]: `T` cannot be sent between threads safely
  --> $DIR/builtin-superkinds-in-metadata.rs:13:23
   |
LL | impl <T:Sync+'static> RequiresRequiresShareAndSend for X<T> { }
   |       --              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `T` cannot be sent between threads safely
   |       |
   |       help: consider further restricting this bound: `T: std::marker::Send +`
   |
   = help: within `X<T>`, the trait `std::marker::Send` is not implemented for `T`
   = note: required because it appears within the type `X<T>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
